--- a/clone/package.json
+++ b/clone/package.json
@@ -4,11 +4,24 @@
   "description": "Cloning Youtube with Vanila and NodeJS",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon babel-node init.js --delay 2",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Taeyoung",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
-    "express": "^4.17.1"
+    "@babel/core": "^7.12.3",
+    "@babel/node": "^7.12.6",
+    "@babel/preset-env": "^7.12.1",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1",
+    "helmet": "^4.2.0",
+    "morgan": "^1.10.0",
+    "pug": "^3.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
